# langchain-workshop-2

./: .gitignore  README.md  edge.py  langgraph.py  materi.md  nodes.py  project-structure.md  state.py
agent/: pyproject.toml
langgraph-studio/: .env.example  langgraph.json  pyproject.toml
langgraph-studio/src/agent/: agent-with-tools.py  basic.py  graph.py  multi-agent.py
notebook/: deno.json  langgraph-basic-chatbot.ipynb  output.json  package-lock.json  package.json
slidev/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  slides.md
